modified ai response